--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
 
     <div class="intro-01">
-        <h1>Selfie What da Hack</h1><br/>
+        <h1 style="background-color: #fff; color: #F7776F">SELFIE</h1>
+        <h1 style="margin-top: 10px; font-size: 8vh;">WHAT DA HACK</h1>
+        <br/>
         <input style="display: none;" type="file" id="mainImageSelect" name="file" />
         <button class="buttonWhite" onclick="selectMainImage()">
           <i class="fa fa-picture-o" aria-hidden="true"></i>
