DA fix select image iphone

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 style="background-color: #fff; color: #F7776F">SELFIE</h1>
         <h1 style="margin-top: 10px; font-size: 8vh;">WHAT DA HACK</h1>
         <br/>
-        <input style="display: none;" type="file" id="mainImageSelect" name="file" />
+        <input style="display: none;" type="file" id="mainImageSelect" accept="image/*" />
         <button class="buttonWhite" onclick="selectMainImage()">
           <i class="fa fa-picture-o" aria-hidden="true"></i>
           &nbsp;Select Image
